[package]
name = "emuavr"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6.8"
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3.5"
hex = "0.4.2"
itertools = "0.9.0"
